<resources>
    <string name="application_name">Hungama</string>
    <string name="view">View</string>
    <string name="activity_label_login">Login or Sign up</string>
    <string name="application_dialog_loading">Loading...</string>
    <string name="application_dialog_loading_content">Loading...</string>
    <string name="application_error_no_connectivity">Please check your Internet connection and retry.</string>
    <string name="social_network_facebook">Facebook</string>
    <string name="social_network_twitter">Twitter</string>
    <string name="social_network_google">Gmail</string>
    <string name="social_network_none">None</string>
    <string name="application_fold_sign">-</string>
    <string name="application_remove_sign">X</string>
    <string name="general_lyrics">Lyrics</string>
    <string name="general_trivia">Trivia</string>
    <string name="connection_error_empty_view_title">No Internet Connection.</string>
    <string name="connection_error_empty_view_button_retry">Retry</string>
    <string name="connection_error_empty_view_button_play_offline">Offline</string>
    <string name="key_placement">key_placement</string>
    <string name="key_is_ad">key_is_ad</string>
    <string name="queue_bottom_text_now_playing1">Now Playing</string>
    <string name="main_actionbar_navigation_music">MUSIC</string>
    <string name="main_actionbar_navigation_discover">DISCOVER</string>
    <string name="main_actionbar_navigation_radio">RADIO</string>
    <string name="main_actionbar_navigation_specials">SPECIALS</string>
    <string name="main_actionbar_navigation_profile">PROFILE</string>
    <string name="main_actionbar_navigation_videos">VIDEOS</string>
    <string name="login_header_title_line_one">Login</string>
    <string name="login_header_title_line_one_2">Discover Music</string>
    <string name="login_header_title_line_new">POPULAR SEARCHES</string>
    <string name="login_hungama_login">Hungama Login</string>
    <string name="title_sign_in_hungama">SIGN IN WITH HUNGAMA</string>
    <string name="title_sign_up_hungama">SIGN UP</string>
    <string name="title_not_a_member_hungama">NOT A MEMBER YET</string>
    <string name="login_hungama_sign_up">Hungama Sign Up</string>
    <string name="login_hungama_password_hint">Password</string>
    <string name="login_hungama_login_login">SIGN IN</string>
    <string name="login_hungama_login_login_lowercase">Login</string>
    <string name="login_hungama_login_forgot_your_password">Forgot password *</string>
    <string name="login_if_not_a_member_yet">Not a member?,</string>
    <string name="login_sign_up"> SIGN UP</string>
    <string name="login_forgot_password_text">Enter the e-mail address associated with your account</string>
    <string name="login_hint">Email / Mobile</string>
    <string name="login_forgot_password_submit">SUBMIT</string>
    <string name="login_signup_button_signup">SIGN UP</string>
    <string name="login_signup_button_signup_lowercase">Sign up</string>
    <string name="login_signup_already_a_member">If you are already a member, </string>
    <string name="login_signup_login">Login</string>
    <string name="login_social_network_login_title_prefix">Login with </string>
    <string name="login_social_network_login_hint_email_id">Email id</string>
    <string name="login_social_network_login_hint_password">Password (optional)</string>
    <string name="login_social_network_login_button_continue">CONTINUE</string>
    <string name="login_signup_error_mandatory">is Mandatory Field</string>
    <string name="login_signup_error_email">Incorrect email format</string>
    <string name="login_signup_error_first_name">First Name, minimum 2 characters</string>
    <string name="login_signup_error_last_name">Last Name must be at least 2 characters</string>
    <string name="login_signup_error_no_in_name">Name should not have number in it.</string>
    <string name="login_facebook_title_english">&lt;b>Connect&lt;/b> with &lt;b>Facebook&lt;/b></string>
    <string name="login_facebook_title">Sign in with Facebook</string>
    <string name="login_twitter_title">Sign in with Twitter</string>
    <string name="login_google_title">Sign in with Google</string>
    <string name="main_actionbar_go_offline">Go Offline</string>
    <string name="main_actionbar_go_offline_play_all">Play all</string>
    <string name="main_actionbar_search">Search</string>
    <string name="main_actionbar_title_music">Music</string>
    <string name="main_actionbar_title_videos">Videos</string>
    <string name="main_actionbar_title_discover">Discover</string>
    <string name="main_actionbar_title_radio">Radio</string>
    <string name="main_actionbar_settings_category_collapsed">+</string>
    <string name="main_actionbar_settings_category_expanded">-</string>
    <string name="main_actionbar_settings_menu_item_videos">Videos</string>
    <string name="main_actionbar_settings_menu_item_new_music">New Music</string>
    <string name="main_actionbar_settings_menu_item_popular_music">Popular Music</string>
    <string name="main_actionbar_settings_menu_item_live_radio">Radio</string>
    <string name="main_actionbar_settings_menu_item_discover">Discover</string>
    <string name="main_actionbar_settings_menu_item_my_stream">My Stream</string>
    <string name="main_actionbar_settings_menu_item_offline_music">Offline Music</string>
    <string name="main_actionbar_settings_menu_item_settings_and_accounts">Settings</string>
    <string name="main_actionbar_settings_menu_item_logout">Logout</string>
    <string name="main_actionbar_settings_menu_item_redeem_coupon">Redeem Coupon</string>
    <string name="main_actionbar_settings_menu_item_my_profile">My Profile</string>
    <string name="main_actionbar_settings_menu_item_my_collections">Downloads</string>
    <string name="main_actionbar_settings_menu_item_my_favorites">My Favorites</string>
    <string name="main_actionbar_settings_menu_item_my_playlists">My Playlists</string>
    <string name="main_actionbar_settings_menu_item_app_tour">App Tour</string>
    <string name="main_actionbar_settings_menu_item_rewards">Rewards</string>
    <string name="main_actionbar_settings_menu_item_rate_this_app">Rate our app</string>
    <string name="main_actionbar_settings_menu_item_give_feedback">Your Feedback</string>
    <string name="main_actionbar_settings_menu_item_help_faq">Help/ FAQ</string>
    <string name="main_actionbar_settings_menu_item_about">About</string>
    <string name="player_error_no_connectivity">Please check your Internet connection and retry.</string>
    <string name="player_loop_mode_on">Loop mode is ON</string>
    <string name="player_loop_mode_off">Loop mode is OFF</string>
    <string name="player_shuffle_mode_on">Shuffle mode is ON</string>
    <string name="player_shuffle_mode_off">Shuffle mode is OFF</string>
    <string name="player_loop_mode_replay_song">Loop mode is REPLAY SONG</string>
    <string name="main_player_bar_progress_bar_scale_text_current">00:00</string>
    <string name="main_player_bar_progress_bar_scale_text_length">00:00</string>
    <string name="main_player_bar_message_song_added_to_queue">Song added to queue</string>
    <string name="main_player_bar_message_songs_added_to_queue">Song(s) added to queue</string>
    <string name="main_player_bar_message_song_already_in_queue">Song(s) Already in queue.</string>
    <string name="main_player_bar_text_not_playing">Please wait...</string>
    <string name="main_player_bar_button_load">LOAD</string>
    <string name="main_player_bar_no_similar_found">No similar items found</string>
    <string name="main_player_bar_no_album_found">No album found</string>
    <string name="main_player_content_action_button_download">GET MP4</string>
    <string name="main_player_content_action_button_share">SHARE</string>
    <string name="main_player_content_action_button_info">INFO</string>
    <string name="main_player_content_action_button_album">ALBUM</string>
    <string name="main_player_content_action_button_trivia">TRIVIA</string>
    <string name="main_player_content_action_button_more">MORE</string>
    <string name="main_player_content_action_button_similar">SIMILAR</string>
    <string name="main_player_content_action_button_video">VIDEO</string>
    <string name="main_player_content_action_button_lyrics">LYRICS</string>
    <string name="main_player_content_action_button_related">RELATED</string>
    <string name="main_player_content_action_button_favorite">FAVORITE</string>
    <string name="player_queue_title_1">Player Queue</string>
    <string name="player_queue_options_save_all_offline">DOWANLOAD ALL OFFLINE</string>
    <string name="player_queue_message_confirm_clear_all">Reset the Songs Queue? Please confirm.</string>
    <string name="player_queue_message_confirm_clear_selected_songs">Do you want to remove selected Song(s)?</string>
    <string name="player_queue_message_confirm_clear_all_ok">Clear all</string>
    <string name="player_queue_message_confirm_clear_selected_songs_ok">Ok</string>
    <string name="player_queue_message_confirm_clear_all_cancel">Cancel</string>
    <string name="player_queue_options_button_play_all">PLAY ALL</string>
    <string name="player_queue_error_auto_save_on">Auto-download is ON. To turn off auto-download, go to app settings.</string>
    <string name="player_queue_error_all_available_offline">All queue songs are already available offline.</string>
    <string name="player_load_menu_my_playlist_dialog_title_load">LOAD PLAYLIST</string>
    <string name="player_load_menu_my_playlist_dialog_title_add">Add To Playlist</string>
    <string name="player_more_menu_similar">Similar</string>
    <string name="player_more_menu_album">Album</string>
    <string name="player_gym_mode_exit_button">Exit gym mode</string>
    <string name="player_gym_mode_swipe">SWIPE</string>
    <string name="home_filter_show">Show</string>
    <string name="home_filter_close">CLOSE</string>
    <string name="mystream_title_button_close">-</string>
    <string name="mystream_title_button_open">+</string>
    <string name="social_mystream_title_bar_button_everyone">Everyone</string>
    <string name="social_mystream_title_bar_button_friends">Friends</string>
    <string name="social_mystream_title_bar_button_me">Me</string>
    <string name="social_mystream_title_bar_button_invite">Invite</string>
    <string name="social_mystream_empty_content_message">Get your friends on-board, follow their music discoveries and share your own. Earn coins.</string>
    <string name="social_mystream_empty_content_button_invite">INVITE FRIENDS</string>
    <string name="verify_dialog_title">Verify Account</string>
    <string name="verify_dialog_subtitle">You are not Logged-in. Please verify your self with your mobile number</string>
    <string name="verify_dialog_edittext_hint">Enter Mobile Number</string>
    <string name="verify_dialog_submit_button">SUBMIT</string>
    <string name="verify_dialog_already_account_text">Already have an Hungama account?</string>
    <string name="verify_dialog_bottm_text">Login with Account</string>
    <string name="save_offline_dialog_message">Find your downloaded songs/videos in the OFFLINE Music of your menu</string>
    <string name="save_offline_dialog_hint">* Downloaded songs will be played without Internet</string>
    <string name="save_offline_dialog_button_dismiss">Dismiss</string>
    <string name="save_offline_dialog_button_show">Show Me</string>
    <string name="favorite_fragment_title_songs">My Fav Songs</string>
    <string name="favorite_fragment_title_albums">My Fav Albums</string>
    <string name="favorite_fragment_title_playlists">My Fav Playlists</string>
    <string name="favorite_fragment_title_videos">My Fav Videos</string>
    <string name="favorite_fragment_title_artists">My Fav Artists</string>
    <string name="save_offline_dialog_title">We downloaded a song for you</string>
</resources>