<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rounded_corner_white"
    android:minHeight="@dimen/redeem_dialog_min_height"
    android:minWidth="@dimen/redeem_dialog_min_width"
    android:orientation="vertical"
    android:paddingBottom="@dimen/redeem_dialog_padding_top_bottom"
    android:paddingLeft="@dimen/trivia_bubble_padding_left_right"
    android:paddingRight="@dimen/trivia_bubble_padding_left_right"
    android:paddingTop="@dimen/redeem_dialog_padding_top_bottom" >

    <com.hungama.myplay.activity.ui.widgets.LanguageTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/save_offline_dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/xlarge_text_size" />

    <com.hungama.myplay.activity.ui.widgets.LanguageTextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/save_offline_dialog_message"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dlg_common_height"
        android:layout_below="@id/viewDivider1"
        android:layout_marginBottom="@dimen/trivia_bubble_content_padding"
        android:layout_marginTop="@dimen/trivia_bubble_content_padding"
        android:orientation="horizontal" >

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/btn_dismiss"
            style="@style/dialog_blue_btn_style"
            android:layout_gravity="center"
            android:text="@string/save_offline_dialog_button_dismiss"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

        <!-- <View -->
        <!-- android:layout_width="0dp" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:background="@color/native_dialog_divider_color" /> -->

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/btn_showme"
            style="@style/dialog_blue_btn_style"
            android:layout_marginLeft="@dimen/nativeDialogButtonMargin"
            android:text="@string/save_offline_dialog_button_show"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <com.hungama.myplay.activity.ui.widgets.LanguageTextView
        android:id="@+id/txt_subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/save_offline_dialog_hint"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_text_size" />

</LinearLayout>