<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/social_mystream_container_no_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/social_mystream_empty_content_padding"
        android:paddingRight="@dimen/social_mystream_empty_content_padding"
        android:visibility="visible" >

        <com.hungama.myplay.activity.ui.widgets.LanguageTextView
            style="@style/TextSmallMediumMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/social_mystream_empty_content_message"
            android:textColor="@color/social_mystream_empty_content_message" />

        <ImageView
            android:layout_width="@dimen/social_mystream_empty_content_icon_size"
            android:layout_height="@dimen/social_mystream_empty_content_icon_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/social_mystream_empty_content_padding"
            android:src="@drawable/icon_general_invite_friends_grey" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_container_no_content_button_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_grey"
            android:paddingLeft="@dimen/social_mystream_empty_content_button_invite_padding"
            android:paddingRight="@dimen/social_mystream_empty_content_button_invite_padding"
            android:text="@string/social_mystream_empty_content_button_invite"
            android:textColor="@color/blue"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_mystream_container_connection_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.hungama.myplay.activity.ui.widgets.LanguageTextView
            android:id="@+id/connection_error_empty_view_title"
            style="@style/TextSmallMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/connection_error_empty_view_title"
            android:textColor="@color/connection_error_empty_view_title_text_color" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/connection_error_empty_view_button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_grey"
            android:paddingLeft="@dimen/connection_error_empty_view_button_retry_padding"
            android:paddingRight="@dimen/connection_error_empty_view_button_retry_padding"
            android:text="@string/connection_error_empty_view_button_retry"
            android:textColor="@color/blue"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/social_mystream_content_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/social_mystream_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/curved_button_size"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_title_bar_button_close"
            style="@style/RightTopCurvedButton"
            android:layout_width="@dimen/curved_button_size"
            android:layout_height="match_parent"
            android:text="@string/mystream_title_button_close"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="@dimen/social_mystream_title_bar_separator_width"
            android:layout_height="match_parent"
            android:background="@color/social_mystream_title_bar_separator_background" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_title_bar_button_everyone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/social_mystream_title_bar_button_background"
            android:text="@string/social_mystream_title_bar_button_everyone"
            android:textColor="@color/social_mystream_title_bar_button_label_selector"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="@dimen/social_mystream_title_bar_separator_width"
            android:layout_height="match_parent"
            android:background="@color/social_mystream_title_bar_separator_background" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_title_bar_button_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/social_mystream_title_bar_button_background"
            android:text="@string/social_mystream_title_bar_button_friends"
            android:textColor="@color/social_mystream_title_bar_button_label_selector"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="@dimen/social_mystream_title_bar_separator_width"
            android:layout_height="match_parent"
            android:background="@color/social_mystream_title_bar_separator_background" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_title_bar_button_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/social_mystream_title_bar_button_background"
            android:text="@string/social_mystream_title_bar_button_me"
            android:textColor="@color/social_mystream_title_bar_button_label_selector"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="@dimen/social_mystream_title_bar_separator_width"
            android:layout_height="match_parent"
            android:background="@color/social_mystream_title_bar_separator_background" />

        <com.hungama.myplay.activity.ui.widgets.LanguageButton
            android:id="@+id/social_mystream_title_bar_button_invite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/social_mystream_title_bar_button_background"
            android:drawableLeft="@drawable/icon_general_invite_friends_white"
            android:paddingLeft="@dimen/social_mystream_title_bar_button_invite_padding"
            android:paddingRight="@dimen/social_mystream_title_bar_button_invite_padding"
            android:text="@string/social_mystream_title_bar_button_invite"
            android:textColor="@color/social_mystream_title_bar_button_text_unselected"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <com.hungama.myplay.activity.ui.widgets.LanguageButton
        android:id="@+id/social_mystream_title_bar_button_open"
        style="@style/RightTopCurvedButton"
        android:layout_width="@dimen/curved_button_size"
        android:layout_height="@dimen/curved_button_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/mystream_title_button_open"
        android:textSize="@dimen/medium_text_size" />

</RelativeLayout>