<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/connection_error_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.hungama.myplay.activity.ui.widgets.LanguageTextView
            android:id="@+id/connection_error_empty_view_title"
            style="@style/TextSmallMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/connection_error_empty_view_title"
            android:textColor="@color/connection_error_empty_view_title_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible" >

            <com.hungama.myplay.activity.ui.widgets.LanguageButton
                android:id="@+id/connection_error_empty_view_button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_grey"
                android:paddingLeft="@dimen/connection_error_empty_view_button_retry_padding"
                android:paddingRight="@dimen/connection_error_empty_view_button_retry_padding"
                android:text="@string/connection_error_empty_view_button_retry"
                android:textColor="@color/blue" />

            <com.hungama.myplay.activity.ui.widgets.LanguageButton
                android:id="@+id/connection_error_empty_view_button_play_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/background_button_grey"
                android:paddingLeft="@dimen/connection_error_empty_view_button_retry_padding"
                android:paddingRight="@dimen/connection_error_empty_view_button_retry_padding"
                android:text="@string/connection_error_empty_view_button_play_offline"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</merge>